syntax = "proto3";

package pb;

//web请求,login是请求地址
//http://127.0.0.1:8100/login?data={{json}}&syn={{syn}}
//json里面数据是接口体转换成json的字符串
//syn里面是md5(data,Key)
//key值 = a40ef1cbe609853bc5f1d6c83caaca75


// TestToAgent TestToAgent
message TestToAgent{
	string FieldA = 1;
}

// TestToGame TestToGame
message TestToGame{
	string FieldA = 1;
	string FieldB = 2;
}

// UpPing UpPing
message UpPing{
	
}

// DownPing DownPing
message DownPing{
	
}

//web请求
//register?data={{json}}&syn={{syn}}
// WebUpRegister 上发游客登录，使用http上发游客登录
message WebUpRegister{
	string MachineCode = 1;
}

// WebDownRegister 下发游客登录
message WebDownRegister{
	string UserID = 1;
	string Password = 2; 
	ServerInfo Info = 3;
	string Cookie = 4; 
	string MachineCode = 5;
}

//web请求
//login?data={{json}}&syn={{syn}}
// WebUpGetServerInfo 使用http登录
message WebUpGetServerInfo{
	string UserName = 1;
	string Password = 2;
}

// WebDownGetServerInfo 下发http登录
message WebDownGetServerInfo{
	ServerInfo Info = 1;
	string UserID = 2;
	string Cookie = 3;//连接agent时，带上的验证码，作为验证用
}

// ServerInfo ServerInfo
message ServerInfo {
	string AgentIP = 1;
	string AgentPort = 2;
}


// UpGetConfigToCenter 向中心服请求配置表
message UpGetConfigToCenter {
	
}



// SyncConfigData 同步数据
message SyncConfigDataToAll {
	string data = 1;
}

// LoginKickPlayerToAgent 登录服踢出玩家
message LoginKickPlayerToAgent {
	int64 UserID = 1;
}

// AgentCheckUserToLogin  向登陆服请求玩家数据正确
message AgentCheckUserToLogin {
	int64 UserID = 1;
	string Cookie = 2;
}

// LoginCheckPlayerToAgent 检查登录的玩家是否合法
message LoginCheckPlayerToAgent{
	int64 UserID = 1;
	bool IsLegal = 2;
}

// PlayerLogin 玩家请求登陆
message PlayerLogin {
	int64 UserID = 1;
	string Cookie = 2;
}

// PlayerLoginToGame 玩家向游戏服请求数据
message PlayerLoginToGame {
	int64 UserID = 1;
}

// DownPlayerLogin 玩家登陆成功
message DownPlayerLogin{
	int32 RoleID = 1;
	bool IsSucceed = 2;
}


//WebUpRegisterPassword?data={{json}}&syn={{syn}}
// WebUpRegisterPassword 上发注册，使用http上发注册 加上密码
message WebUpRegisterPassword{
	string UserID = 1;
	string Password = 2;
	string Code = 3;//验证码
}

// WebDownRegisterPassword 下发注册
message WebDownRegisterPassword{
	string UserID = 1;
	ServerInfo Info = 2;
	string Cookie = 3; 
}

